# TK8_stack_based_on_list

./: CMakeLists.txt
include/: List.h  Stack.h  list_declaration.h
samples/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  test_main.cpp  test_stack.cpp
